# VibeVoicezz

./: .gitignore  HDSD_GUI_VN.md  HUONG_DAN_CHAY_MAY_MOI.md  LICENSE  gui.py  gui_settings.json  model.txt  pyproject.toml  run_gui.bat  voice_presets.json
docs/: OmniVoice.ipynb  community-projects.md  data_preparation.md  data_preparation_advanced.md  evaluation.md  generation-parameters.md  lang_id_name_map.tsv  languages.md  tips.md  training.md  voice-design.md
examples/: README.md  run_emilia.sh  run_eval.sh  run_finetune.sh
examples/config/: data_config_emilia.json  data_config_finetune.json  ds_config_zero2.json  train_config_emilia.json  train_config_finetune.json  train_config_finetune_sdpa.json  train_config_multilingual.json
generated_audios/: history.json
omnivoice/: __init__.py
omnivoice/cli/: demo.py  infer.py  infer_batch.py  train.py
omnivoice/data/: batching.py  collator.py  dataset.py  processor.py
omnivoice/eval/: __init__.py  utils.py
omnivoice/eval/models/: ecapa_tdnn_wavlm.py  utmos.py
omnivoice/eval/mos/: utmos.py
omnivoice/eval/speaker_similarity/: sim.py
omnivoice/eval/wer/: common.py  fleurs.py  hubert.py  minimax.py  norm_config_module.py  seedtts.py  sensevoice.py  text_norm_omni.py
omnivoice/models/: omnivoice.py
omnivoice/scripts/: denoise_audio.py  extract_audio_tokens.py  extract_audio_tokens_add_noise.py  jsonl_to_webdataset.py
omnivoice/training/: builder.py  checkpoint.py  config.py
omnivoice/utils/: audio.py  common.py  data_utils.py  duration.py  lang_map.py  text.py  voice_design.py
